# litigant-portal

./: .clauderc  .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CLEANUP_PROGRESS.md  Caddyfile  Dockerfile  LICENSE  MOBILE_TESTING.md  Makefile  PR_REVIEW_INITIAL.md  README.md  REVIEW.md  TECH_STACK.md  conftest.py  dev.sh  docker-compose.docassemble.qa.yml  docker-compose.docassemble.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fly.toml  nginx.conf  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  start-with-ngrok-single.sh  svelte.config.js  tailwind.config.js  tox.ini  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  enhancement.yml  feature.yml  qa-round.md  qa-round.yml  task.yml
.github/workflows/: cd.yml  deploy.yml  docker-build.yml  lint.yml  pages.yml  qa-deploy-do.yml  staging-deploy.yml  stale.yml  tests.yml
.storybook/: main.ts  preview.ts
admin_site/: apps.py  decorators.py  dev_auth.py  forms.py  models.py  urls.py  views.py
admin_site/migrations/: 0001_initial.py
app/chat/: models.py
app/config/: settings.py
app/dashboard-archive/: README.md
app/portal/: admin.py  tests.py  views.py
app/templates/: base.html
archive/: README.md
archive/v1_code/: chat.js  chat_endpoints.py  chat_models.py  chat_service.py  test_agents.py  test_case_views.py  test_chat_session_topic.py
chat/: admin.py  apps.py  checks.py  middleware.py  models.py  signals.py  urls.py  views.py
chat/agents/: __init__.py  base.py  chat_summarization.py  document_extraction.py  litigant_assistant.py  weather.py
chat/migrations/: 0001_initial.py  0002_caseinfo_timelineevent_and_more.py  0002_remove_document_chat_docume_search__9bab25_gin_and_more.py  0003_remove_message_content_remove_message_role_and_more.py  0004_add_topic_jurisdiction_to_chatsession.py  0004_remove_chatsession_agent.py  0005_remove_message_sources.py  0006_migrate_dates_and_actions.py
chat/prompts/: __init__.py  adult_name_change_nd.py  base.py  eviction_il.py
chat/providers/: base.py  factory.py  groq.py  ollama.py  openai_provider.py
chat/services/: chat_service.py  extraction_service.py  pdf_service.py  search_service.py
chat/tests/: __init__.py  test_action_plan.py  test_agents.py  test_case_views.py  test_chat_session_topic.py  test_court_schema.py  test_middleware.py  test_models.py  test_prompts.py  test_services.py  test_signals.py  test_topic_schema.py  test_views.py
config/: settings.py  urls.py
config/tests/: test_read_secret.py
content/: _test_fixture.yml
corpus-sources/: README.md
dashboard-archive/templates/: base.html
deploy/caddy/: Caddyfile.dev  Caddyfile.prod
deploy/qa-do/: Caddyfile.qa  README.md  docker-compose.qa.yml
docassemble/nd-name-change/: README.md  lp-branding.css  petition-standard.yml  petition-waiver.yml  test-personas.md
docker/caddy/: Caddyfile  Caddyfile.prod
docker/django/: Dockerfile  entrypoint.sh  install-tailwind.sh
docs/: AGENT_DEV_GUIDE.md  ARCHITECTURE.md  ATOMIC_DESIGN_ARCHITECTURE.md  ATTACHMENT_SYSTEM.md  CAMERA_TECH_STACK.md  CHANGES.md  CODE_REVIEW_DOCUMENT_CAMERA.md  COMPONENT_LIBRARY.md  CONVERSION_STATUS.md  CSP-AND-LINTING.md  CSP-SETUP-SUMMARY.md  CourtListener-Frontend-Architecture.md  DEPLOY_PYTHONANYWHERE.md  DEVELOPMENT.md  DOCUMENT_CAMERA.md  IMPLEMENTATION_SUMMARY.md  QA-DEPLOY.md  QUICKSTART.md  README.md  REQUIREMENTS.md  REVIEW_SUMMARY.md  ROADMAP_feb2026.md  SECURITY.md  SETUP-COMPLETE.md  SETUP-REVIEW.md  STORYBOOK_INTEGRATION.md  ShowcaseSummary.md  Tailwind architecture.md  VANILLA_JS.md  VISION.md  ai-tone-guide.md  architecture-analysis.md  briefcase-architecture.md  chat-plan.md  dashboard-reintegration-changes.md  demo-flow-jane.md  demo-strategy.md  docassemble-authoring.md  docassemble-local-dev.md  docassemble-qa-hosting.md  (+22 more)
docs/expert-feedback/: 2026-01-15-lawyer-eviction.md
frontend/src/: main.js
litigant_portal/: main.py  manage.py  models.py  settings.py  utils.py
litigant_portal/agents/: __init__.py  assistant.py  base.py  litigant_assistant.py  message_schema.py  weather_agent.py
litigant_portal/agents_v2/: __init__.py  assistant.py  base.py  weather.py
litigant_portal/app/: admin.py  apps.py  checks.py  context_processors.py  court_context.py  middleware.py  signals.py  tests.py  urls.py  utils.py  views.py
litigant_portal/cli/: __init__.py  manage.py  tailwind.py
litigant_portal/content/: _test_fixture.yml  adult-name-change-standard.yml  adult-name-change-waiver.yml  adult-name-change.yml  eviction-landlord.yml  eviction-tenant.yml
litigant_portal/prompts/: __init__.py  base.py
portal/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
portal/migrations/: 0001_initial.py
portal/topic_flow/: __init__.py  engine.py  registry.py  session.py  urls.py  views.py
prompts/: chat-system-v1.md  chat-system.md
scripts/: deploy.sh  docker-entrypoint.sh  file_issue.py  init-server.sh  install-tailwindcss.sh  test_markdown.py  test_render.js  update.sh
scripts/markdown_samples/: response_0.json  response_1.json  response_2.json  response_3.json  response_4.json
secrets/: README.md
src/css/: main.css
src/styles/: design-tokens.css  style-guide.css
static/css/: main.built.css  main.css
static/js/: alpine.js  app.js  chat.js  components.js  theme.js
templates/: base.html  demo_camera.html  index.html
templates/account/: base.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/components/: document_camera.html
templates/cotton/: button.html  dropdown.html  icon.html  input.html  link.html  search_input.html  select.html  select_dropdown.html
templates/layouts/: mobile_base.html
templates/molecules/: logo.html  search_bar.html  topic_card.html
templates/organisms/: hero.html  mobile_footer.html  (+2 more)
tests/: test_hello.py
(+401 files in other folders)
