[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "litigant_portal"
version = "0.1.0"
description = "Access to Justice Portal"
authors = [{ name = "Free Law Project", email = "info@free.law" }]
requires-python = ">=3.13"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = [ "LICENSE" ]

keywords = [
    "legal",
    "courts",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

urls.Repository = "https://github.com/freelawproject/litigant-portal"
urls."Organisation Homepage" = "https://free.law/"
dependencies = [
    "Django>=5.2",
    "django-allauth>=65.0",
    "django-cotton>=1.0",
    "django-distill>=3.0",
    "heroicons>=2.0",
]

[project.optional-dependencies]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.5.0",
    "ruff>=0.11.8",
]


[tool.setuptools]
packages = [ "litigant_portal" ]

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
  # printf-string-formatting
  "UP031",
]

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
format_css = true
format_js = true
ignore = "H006,H030,H031"  # img alt, meta description, meta keywords
